correct spacing of error message

--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -482,5 +482,10 @@ small.error-message {
 	*/
 	form {
 		width: 40%;
+		margin-top: 2rem;
+	}
+
+	small.error-message {
+		top: 3.5rem;
 	}
 }
